# cs482-icg-pj

./: README
ICG-code/: readme.txt
ICG-code/common/ext/w64/include/GL/: glui.h  glut.h
ICG-code/common/ext/w64/include/arma/armadillo_bits/: config.hpp  diskio_meat.hpp  fn_repmat.hpp  op_repmat_meat.hpp
ICG-code/common/ext/w64/include/optix/: optix.h  optix_d3d10_interop.h  optix_d3d11_interop.h  optix_d3d9_interop.h  optix_device.h  optix_gl_interop.h  optix_host.h  optix_math.h
ICG-code/common/ext/w64/include/optix/internal/: optix_datatypes.h  optix_declarations.h  optix_defines.h  optix_internal.h
ICG-code/common/ext/w64/include/optix/optixu/: optixpp.h  optixu.h  optixu_aabb.h  optixu_math_stream.h  optixu_matrix.h
ICG-code/common/src/libs/image/: CMakeLists.txt  cubeUtils.h  cubemap.h  image.cpp  image.h  imageUtils.cpp  imageUtils.h  mipmap.h  sparseCubeMap.h  sparseImage.h  waveletImageUtils.h
ICG-code/common/src/libs/imageio/: CMakeLists.txt  imageio.cpp  imageio.h
ICG-code/common/src/libs/misc/: CMakeLists.txt  arrays.h  compilerOptions.h  console.cpp  console.h  misc.cpp  mtreport.h  properties.cpp  properties.h  queue.h  report.h  shortString.h  stats.h  stdcommon.h  stringUtils.h  threadUtils.h  timer.h
ICG-code/common/src/libs/serialization/: CMakeLists.txt  archive.cpp  archive.h  archiveRegistry.h  archivehelper.h  biniarchive.h  binoarchive.h  textiarchive.h  textoarchive.h  todo.txt  xmliarchive.h  xmloarchive.h
ICG-code/common/src/libs/tbbutils/: CMakeLists.txt  tbbtimer.h  tbbutils.h
ICG-code/common/src/libs/tinyxml/: CMakeLists.txt  tinyxml.cpp  tinyxml.h
ICG-code/common/src/libs/vmath/: CMakeLists.txt  cone.h  consts.h  fastcone.h  frame.h  frustum.h  functions.h  geom3.h  geomrange3.h  interval.h  linearmap3.h  matrix2.h  matrix3.h  matrix4.h  plane.h  projection.h  random.h  range.cpp  range1.h  range2.h  range3.h  range6.h  spectrum3.h  spline.h  streamMethods.h  tuple2.h  tuple3.h  uspline.h  vec2.h  vec3.h  vec4.h  vec6.h  vfunctions.h  vmath.cpp
ICG-code/far/src/: CMakeLists.txt
ICG-code/far/src/libs/lightgen/: CMakeLists.txt  LightData.cpp  LightData.h  LightDiffuseGenerator.cpp  LightDiffuseGenerator.h  LightGenerator.cpp  LightGenerator.h  LightSerializeGenerator.cpp  LightSerializeGenerator.h  SerializableLightCache.cpp  SerializableLightCache.h
ICG-code/far/src/libs/ray/: CMakeLists.txt  compilerOptions.h  intersection.h  rayBVHEngine.cpp  rayBVHEngine.h  rayBVHEngineBuilder.cpp  rayBVHEngineBuilder.h  rayBVHEngineData.cpp  rayBVHEngineData.h  rayDoubleSidedEngine.cpp  rayDoubleSidedEngine.h  rayEngine.cpp  rayEngine.h  rayIntersectionOp.h  rayListEngine.cpp  rayListEngine.h  rayListEngineBuilder.cpp  rayListEngineBuilder.h  rayListEngineData.h  rayPrimitive.cpp  rayPrimitive.h  rayTesselatedEngine.cpp  rayTesselatedEngine.h  rayTesselatedKdTreeEngine.cpp  rayTesselatedKdTreeEngine.h  rayTesselatedPrimitive.cpp  rayTesselatedPrimitive.h  rayTesselationCache.cpp  rayTesselationCache.h
ICG-code/far/src/libs/ray/_deprecated/: rayBvhNode.cpp  rayBvhNode.h  rayCurveSegment.h  rayDeformedMeshTriangle.h  rayKdTreeEngine.cpp  rayKdTreeEngine.h  rayMeshTriangle.h  rayMonitoredEngine.h  rayPrimitiveBVHEngine.cpp  rayPrimitiveBVHEngine.h  rayPrimitiveEngine.cpp  rayPrimitiveEngine.h  rayPrimitive_old.h  raySphere.h
ICG-code/far/src/libs/sampler/: CMakeLists.txt  Distribution1D.h  LightSampleUtils.cpp  LightSampleUtils.h  pathSampler.cpp  pathSampler.h
ICG-code/far/src/libs/scene/: CMakeLists.txt  background.cpp  background.h  background_standard.cpp  background_standard.h  camera.cpp  camera.h  element.cpp  element.h  instance.cpp  instance.h  intersectionMethods.h  lens.cpp  lens.h  lens_standard.cpp  lens_standard.h  light.cpp  light.h  light_cll.cpp  light_cll.h  material.cpp  material.h  material_delta.cpp  material_delta.h  material_smooth.cpp  material_smooth.h  material_uber.cpp  material_uber.h  reflectance.cpp  reflectance.h  reflectance_delta.cpp  reflectance_delta.h  reflectance_smooth.cpp  reflectance_smooth.h  reflectance_uber.cpp  reflectance_uber.h  reflectance_union.cpp  reflectance_union.h  sampling.h  scene.cpp  (+39 more)
ICG-code/mcs/: cmake64.bat
ICG-code/mcs/src/: CMakeLists.txt
ICG-code/mcs/src/apps/ccmat/: CMakeLists.txt  main.cpp
ICG-code/mcs/src/apps/lightcut/: CMakeLists.txt  main.cpp
ICG-code/mcs/src/apps/mlightcut/: CMakeLists.txt  main.cpp
ICG-code/mcs/src/apps/mrcs/: CMakeLists.txt  MrcsCascade.cpp  MrcsCascade.h  MrcsLightgroup.cpp  MrcsLightgroup.h  common.h  main.cpp
ICG-code/mcs/src/libs/gpshoot/: CMakeLists.txt  GatherPointShootTbbImpl.h  GatherPointShooter.cpp  GatherPointShooter.h
ICG-code/mcs/src/libs/lightcutter/: CMakeLists.txt  Leafcutter.cpp  Leafcutter.h  Lightcutter.cpp  Lightcutter.h  MTLightcutter.cpp  MTLightcutter.h  MTMdLightcutter.cpp  MTMdLightcutter.h  MdLightcutter.cpp  MdLightcutter.h
ICG-code/mcs/src/libs/lighttree/: AgglomerativeLightTreeBuilder.cpp  AgglomerativeLightTreeBuilder.h  BuilderKdTree.h  BuilderKdTreeImpl.h  BuilderLightCache.h  CMakeLists.txt  DebugLightTreeBuilder.cpp  DebugLightTreeBuilder.h  DivisiveLightTreeBuilder.cpp  DivisiveLightTreeBuilder.h  GatherForestBuilder.cpp  GatherForestBuilder.h  GatherTree.cpp  GatherTree.h  GatherTreeBuilder.cpp  GatherTreeBuilder.h  LightTree.cpp  LightTree.h  LightTreeBuilder.h  LightTreeBuilderUtil.h  MdDebugLightTreeBuilder.cpp  MdDebugLightTreeBuilder.h  MdDivisiveLightTreeBuilder.cpp  MdDivisiveLightTreeBuilder.h  MdLightTreeBuilder.cpp  MdLightTreeBuilder.h
ICG-code/mcs/src/libs/nmatrix/: CMakeLists.txt  CoClusterMatrix.cpp  CoClusterMatrix.h  GatherGroupTbbImpl.cpp  GatherGroupTbbImpl.h  KnnMatrix.cpp  KnnMatrix.h  KnnMatrixImpl.cpp  KnnMatrixImpl.h  LightTree.cpp  LightTree.h  LightTreeBuilder.cpp  LightTreeBuilder.h  MatrixData.h  NMatUtils.cpp  NMatUtils.h  kdtree.h
ICG-code/mcs/src/libs/vlutil/: CMakeLists.txt  LightEval.cpp  LightEval.h  ListVirtualLightCache.h  SimpleVirtualLightCache.h
ICG-code/mcs/tests/: cornellBox.xml  sphereBoxArea.xml  toaster.xml
