# AUX_SOURCE_DIRECTORY(. SOURCES)

SET(SOURCES
background.h
background.cpp
background_standard.h
background_standard.cpp
lens.h
lens.cpp
lens_standard.h
lens_standard.cpp
camera.h
camera.cpp
sceneObject.h
shape_curve.h
shape_curve.cpp
shape_deformedmesh.h
shape_deformedmesh.cpp
source.h
source.cpp
source_delta.h
source_delta.cpp
source_area.h
source_area.cpp
vlight.h
vlight.cpp
light.h
light.cpp
material.h
material.cpp
material_delta.h
material_delta.cpp
material_smooth.h
material_smooth.cpp
material_uber.h
material_uber.cpp
reflectance.h
reflectance.cpp
reflectance_delta.h
reflectance_delta.cpp
reflectance_smooth.h
reflectance_smooth.cpp
reflectance_union.h
reflectance_union.cpp
reflectance_uber.h
reflectance_uber.cpp
shape_mesh.h
shape_mesh.cpp
scene.h
scene.cpp
element.h
element.cpp
shape.h
shape.cpp
sampling.h
smath.h
shape_sphere.h
shape_sphere.cpp
instance.h
instance.cpp
surface.h
surface.cpp
texture.h
texture_impl.h
texture.cpp
xform.h
xform.cpp
xform_static.h
xform_static.cpp
xform_dynamic.h
xform_dynamic.cpp
scenearchive.h
scenearchive.cpp
shapearchive.h
shapearchive.cpp
intersectionMethods.h
tesselation.h
tesselation.cpp
shape_subdiv.h
shape_subdiv.cpp
)

ADD_LIBRARY(scene ${SOURCES})

TARGET_LINK_LIBRARIES(scene vmath misc serialization imageio)